--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -7,4 +7,6 @@
 <meta name="msapplication-TileColor" content="#2d99ef">
 <meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
+<meta name="keywords" content="SPH, SPlisHSPlasH, fluids, simulation, physics">
+
 
