--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -8,5 +8,5 @@
 <meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 <meta name="keywords" content="SPH, SPlisHSPlasH, fluids, simulation, physics">
-
+<meta name="robots" content="index, follow" />
 
